# wsm

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  makefile  wsm.c
src/: Makefile.am  main.cpp  wsm-launch.cpp  wsm-launch.hpp  wsm.cpp  wsm.hpp
