#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_PREREQ([2.69])

AC_CONFIG_SRCDIR([src/wsm.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_FILES([Makefile])

AC_PROG_CXX

AC_OUTPUT
